# lemon

./: .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  diff  robot.service  spi-gpio-cs-overlay.dts
src/: bmi088.rs  brain.rs  controller.rs  drivebase.rs  imu.rs  lib.rs  loader.rs  logging.rs  main.rs  motion_profile.rs  motor.rs  odom.rs  path.rs  pid.rs  replay.rs  robot.rs  robota.rs  robotb.rs  state.rs  triports.rs  units.rs  util.rs  vec.rs
src/parts/: catapult.rs  drive.rs  imu.rs  loader.rs  mod.rs
src/path/: aux.rs  mod.rs  nop.rs  odomcond.rs  path.rs  pathseg.rs  powermotors.rs  setvel.rs  turnto.rs
