[package]
name = "lemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "robota"
path = "src/robota.rs"

[[bin]]
name = "robotb"
path = "src/robotb.rs"

[dependencies]
client = { git = "ssh://git@github.com/EMU5-Robotics/transport", rev = "cab298a55192cf496576b127a459629c3666e4d4", features = ["coprocessor"] }
common = { git = "ssh://git@github.com/EMU5-Robotics/transport", rev = "cab298a55192cf496576b127a459629c3666e4d4" }
protocol = { git = "ssh://git@github.com/EMU5-Robotics/transport", rev = "cab298a55192cf496576b127a459629c3666e4d4" }
communication = { git = "ssh://git@github.com/EMU5-Robotics/communication", rev = "db0a2ac922219ae8fce52c88fd9527121b5d66b6" }

anyhow = "1.0"
log = "0.4"
rppal = { version = "0.17.1", features = ["hal"]}
rand = "0.8.5"
amt22 = "0.1.0"

[profile.dev]
strip = "debuginfo"
